--- a/index.html
+++ b/index.html
@@ -467,7 +467,69 @@
             </li>
           </ul>
         </div>
+        <div class="subscr">
+          <label>
+            Subscribe
+            <input type="email" name="email" />
+          </label>
+          <button class="footer-button" type="button">
+            Subscribe
+            <svg class="footer-icon" width="24" height="20">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <svg class="modal-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+        <h3 class="modal-title">
+          Leave your contacts and we will call you back
+        </h3>
+        <div class="modal-input">
+          <label class="modal-label" for="username">Name</label>
+          <svg class="modal-icon" width="12" height="12">
+            <use href="./images/icons.svg#icon-person"></use>
+          </svg>
+          <input type="text" name="username" class="username" id="username" />
+        </div>
+        <div class="modal-input">
+          <label class="modal-label" for="user-phone">Phone</label>
+          <svg class="modal-icon" width="13" height="13">
+            <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+          <input
+            type="tel"
+            name="user-phone"
+            class="user-phone"
+            id="user-phone"
+          />
+        </div>
+        <div class="modal-input">
+          <label class="modal-label" for="user-email">Email</label>
+          <svg class="modal-icon" width="16" height="12">
+            <use href="./images/icons.svg#icon-email"></use>
+          </svg>
+          <input
+            type="email"
+            name="user-email"
+            class="user-email"
+            id="user-email"
+          />
+        </div>
+        <div class="modal-input">
+          <label class="modal-label">Comment</label>
+          <textarea
+            class="form-input"
+            name="Comment"
+            placeholder="Text input"
+          ></textarea>
+          <button type="submit"></button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
