--- a/index.html
+++ b/index.html
@@ -483,52 +483,86 @@
     </footer>
     <div class="modal-overlay">
       <div class="modal">
-        <svg class="modal-icon" width="8" height="8">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
+        <button type="button" class="modal-btn-close">
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <h3 class="modal-title">
           Leave your contacts and we will call you back
         </h3>
-        <div class="modal-input">
-          <label class="modal-label" for="username">Name</label>
-          <svg class="modal-icon" width="12" height="12">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
-          <input type="text" name="username" class="username" id="username" />
-        </div>
-        <div class="modal-input">
-          <label class="modal-label" for="user-phone">Phone</label>
-          <svg class="modal-icon" width="13" height="13">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
-          <input
-            type="tel"
-            name="user-phone"
-            class="user-phone"
-            id="user-phone"
-          />
-        </div>
-        <div class="modal-input">
-          <label class="modal-label" for="user-email">Email</label>
-          <svg class="modal-icon" width="16" height="12">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
-          <input
-            type="email"
-            name="user-email"
-            class="user-email"
-            id="user-email"
-          />
-        </div>
-        <div class="modal-input">
-          <label class="modal-label">Comment</label>
-          <textarea
-            class="form-input"
-            name="Comment"
-            placeholder="Text input"
-          ></textarea>
-          <button type="submit"></button>
-        </div>
+        <form class="modal-form" name="form-modal">
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="email"
+                id="user-email"
+                name="user-email"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              rows="4"
+              class="modal-form-comment"
+              name="comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+            <div class="modal-form-checkbox">
+              <input
+                class="visually-hidden"
+                type="checkbox"
+                name="user-privacy"
+                id="user-privacy"
+              />
+              <label class="modal-form-label" for="user-privacy"
+                ><span class="checkbox-square">
+                  <svg class="modal-checkbox-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-click"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a class="privacy-accent">Privacy Policy</a></label
+              >
+            </div>
+            <button class="modal-btn-submit" type="submit">Send</button>
+          </div>
+        </form>
       </div>
     </div>
   </body>
