--- a/index.html
+++ b/index.html
@@ -468,16 +468,18 @@
           </ul>
         </div>
         <div class="footer-form-subscribe">
+          <p class="subscr-text">Subscribe</p>
           <form class="form-subscribe" name="subscribe-footer-form">
-            <label class="footer-label" for="subscr-email">Subscribe</label>
             <div class="footer-wrapper-input">
-              <input
-                type="email"
-                name="email"
-                class="footer-input"
-                placeholder="E-mail"
-                id="subscr-email"
-              />
+              <label class="footer-label" for="subscr-email">
+                <input
+                  type="email"
+                  name="email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                  id="subscr-email"
+                />
+              </label>
               <button class="footer-button" type="button">
                 Subscribe
                 <svg class="footer-icon" width="24" height="24">
@@ -521,7 +523,7 @@
                 id="user-phone"
                 name="user-phone"
               />
-              <svg class="modal-form-icon" width="24" height="24">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -535,7 +537,7 @@
                 id="user-email"
                 name="user-email"
               />
-              <svg class="modal-form-icon" width="24" height="24">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -549,24 +551,25 @@
               id="user-comment"
               placeholder="Text input"
             ></textarea>
-            <div class="modal-form-checkbox">
-              <input
-                class="visually-hidden"
-                type="checkbox"
-                name="user-privacy"
-                id="user-privacy"
-                checked
-              />
-              <label class="modal-form-label" for="user-privacy"
-                ><span class="checkbox-square">
-                  <svg class="modal-checkbox-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-click"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="privacy-accent" href="">Privacy Policy</a></label
-              >
-            </div>
+          </div>
+          <div class="modal-form-checkbox">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              checked
+            />
+            <label class="modal-form-label" for="user-privacy"
+              ><span class="checkbox-square">
+                <svg class="modal-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-accent" href="">Privacy Policy</a></label
+            >
+
             <button class="modal-btn-submit" type="submit">Send</button>
           </div>
         </form>
