--- a/index.html
+++ b/index.html
@@ -470,23 +470,21 @@
         <div class="footer-form-subscribe">
           <p class="subscr-text">Subscribe</p>
           <form class="form-subscribe" name="subscribe-footer-form">
-            <div class="footer-wrapper-input">
-              <label class="footer-label" for="subscr-email">
-                <input
-                  type="email"
-                  name="email"
-                  class="footer-input"
-                  placeholder="E-mail"
-                  id="subscr-email"
-                />
-              </label>
-              <button class="footer-button" type="button">
-                Subscribe
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-frame"></use>
-                </svg>
-              </button>
-            </div>
+            <label class="footer-label" for="subscr-email">
+              <input
+                type="email"
+                name="email"
+                class="footer-input"
+                placeholder="E-mail"
+                id="subscr-email"
+              />
+            </label>
+            <button class="footer-button" type="button">
+              Subscribe
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -509,7 +507,7 @@
                 id="user-name"
                 name="user-name"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -554,10 +552,11 @@
           </div>
           <div class="modal-form-checkbox">
             <input
-              class="visually-hidden"
+              class="visually-hidden custom-checkbox"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
+              value="true"
               checked
             />
             <label class="modal-form-label" for="user-privacy"
@@ -569,9 +568,8 @@
               I accept the terms and conditions of the
               <a class="privacy-accent" href="">Privacy Policy</a></label
             >
-
-            <button class="modal-btn-submit" type="submit">Send</button>
           </div>
+          <button class="modal-btn-submit" type="submit">Send</button>
         </form>
       </div>
     </div>
