--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 id="subscr-email"
               />
             </label>
-            <button class="footer-button" type="button">
+            <button class="footer-button" type="submit">
               Subscribe
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-frame"></use>
@@ -540,7 +540,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
+          <div class="modal-form-field-comment">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               rows="4"
