add mobile, table version (header, hero, team)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu is-open" data-menu>
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
           <button type="button" class="mobile-menu-close" data-menu-close>
             <svg class="menu-icon" width="8" height="8">
@@ -131,7 +131,7 @@
       </div>
     </header>
     <main>
-      <section class="hero hidden">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button" data-modal-open>
@@ -139,7 +139,7 @@
           </button>
         </div>
       </section>
-      <section class="page-info hidden">
+      <section class="page-info">
         <div class="container">
           <h2 class="visually-hidden"></h2>
           <ul class="info-list">
@@ -194,7 +194,7 @@
           </ul>
         </div>
       </section>
-      <section class="page-team hidden">
+      <section class="page-team">
         <div class="container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list">
@@ -502,7 +502,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer hidden">
+    <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-wrapper-logo">
           <a class="logo footer-logo" href="./index.html"
@@ -547,7 +547,7 @@
           </ul>
         </div>
         <div class="footer-form-subscribe">
-          <p class="subscr-text">Subscribe</p>
+          <p class="subscribe-text">Subscribe</p>
           <form class="form-subscribe" name="subscribe-footer-form">
             <label class="footer-label" for="subscr-email">
               <input
